--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,8 @@ p.nav-link-color {
     box-shadow: 0 4px 8px 0 #39fd9bc9, 0 6px 20px 0 rgb(0 0 0 / 19%);
     border-radius: 35px;
     background-color: #1e203f;
-    width: fit-content;
+    max-width: fit-content;
+    max-height: fit-content;
 }
 
 #box-2 {
@@ -82,11 +83,6 @@ p.nav-link-color {
     border-radius: 35px;
     background-color: #1e203f;
     height: fit-content;
-}
-
-.fa, .fas:hover{
-    transform: scale(1.2);
-    transition: 3s;
 }
 
 .h2, h2 {
@@ -342,6 +338,10 @@ footer {
     box-shadow: 0 4px 8px 0 #39fd9bc9, 0 6px 20px 0 rgb(0 0 0 / 19%);
     border-radius: 35px;
     background-color: #1e203f;
+}
+
+#bruna-img {
+    padding: 5px;
 }
 
 
